* Fix ELB v1 and v2 service meta. * Fix WAF service metadata. * Fixing some minor metadata issues. * Update titles to strict svc_Action format.

--- a/.doc_gen/metadata/acm_metadata.yaml
+++ b/.doc_gen/metadata/acm_metadata.yaml
@@ -348,6 +348,5 @@ acm_Usage_ImportListRemove:
               snippet_tags:
                 - python.example_code.acm.Usage_ImportListRemove
   services:
-    acm: {AddTagsToCertificate, DeleteCertificate, DescribeCertificate, GetCertificate,
-          ImportCertificate, ListCertificates, ListTagsForCertificate, RemoveTagsFromCertificate,
-          RequestCertificate, ResendValidationEmail}
+    acm: {AddTagsToCertificate, DeleteCertificate, DescribeCertificate, GetCertificate, ImportCertificate, ListCertificates,
+      ListTagsForCertificate, RemoveTagsFromCertificate, RequestCertificate, ResendValidationEmail}
