--- a/.doc_gen/metadata/auto-scaling_metadata.yaml
+++ b/.doc_gen/metadata/auto-scaling_metadata.yaml
@@ -138,7 +138,8 @@ auto-scaling_DeleteAutoScalingGroup:
         - sdk_version: 3
           github: dotnetv3/cross-service/ResilientService/AutoScalerActions
           excerpts:
-            - description: Update the minimum size of an Auto Scaling group to zero, terminate all instances in the group, and delete the group.
+            - description: Update the minimum size of an Auto Scaling group to zero, terminate all instances in the group,
+                and delete the group.
               snippet_tags:
                 - ResilientService.dotnetv3.AutoScaling.DeleteAutoScalingGroup
             - description:
@@ -173,7 +174,8 @@ auto-scaling_DeleteAutoScalingGroup:
         - sdk_version: 3
           github: python/example_code/auto-scaling
           excerpts:
-            - description: Update the minimum size of an Auto Scaling group to zero, terminate all instances in the group, and delete the group.
+            - description: Update the minimum size of an Auto Scaling group to zero, terminate all instances in the group,
+                and delete the group.
               snippet_tags:
                 - python.cross_service.resilient_service.AutoScaler.decl
                 - python.cross_service.resilient_service.auto-scaling.DeleteAutoScalingGroup
@@ -793,13 +795,11 @@ auto-scaling_Scenario_GroupsAndInstances:
   title: Manage &AS; groups and instances using an &AWS; SDK
   title_abbrev: Manage groups and instances
   synopsis_list:
-    - Create an &ASlong; group with a launch template and Availability
-      Zones, and get information about running instances.
+    - Create an &ASlong; group with a launch template and Availability Zones, and get information about running instances.
     - Enable &CWlong; metrics collection.
     - Update the group's desired capacity and wait for an instance to start.
     - Terminate an instance in the group.
-    - List scaling activities that occur in response to user requests and capacity
-      changes.
+    - List scaling activities that occur in response to user requests and capacity changes.
     - Get statistics for &CW; metrics, then clean up resources.
   category: Scenarios
   languages:
@@ -814,9 +814,8 @@ auto-scaling_Scenario_GroupsAndInstances:
                 - AutoScaling.dotnetv3.AutoScalingBasics.Usings
                 - AutoScaling.dotnetv3.AutoScalingBasics
                 - AutoScaling.dotnetv3.AutoScalingBasics.UIWrapper
-            - description: Define functions that are called by the scenario to
-                manage launch templates and metrics. These functions wrap &AS;,
-                &EC2;, and &CW; actions.
+            - description: Define functions that are called by the scenario to manage launch templates and metrics. These
+                functions wrap &AS;, &EC2;, and &CW; actions.
               snippet_tags:
                 - AutoScaling.dotnetv3.AutoScalingActions.AutoScalingWrapper
                 - AutoScaling.dotnetv3.AutoScalingActions.EC2Wrapper
@@ -856,9 +855,8 @@ auto-scaling_Scenario_GroupsAndInstances:
             - description: Run an interactive scenario at a command prompt.
               snippet_tags:
                 - python.example_code.auto-scaling.Scenario_GroupsAndInstances
-            - description: Define functions that are called by the scenario to
-                manage launch templates and metrics. These functions wrap
-                &EC2; and &CW; actions.
+            - description: Define functions that are called by the scenario to manage launch templates and metrics. These
+                functions wrap &EC2; and &CW; actions.
               snippet_tags:
                 - python.example_code.auto-scaling.helper.ServiceHelper
     C++:
@@ -881,16 +879,5 @@ auto-scaling_Scenario_GroupsAndInstances:
                 - rustv1/examples/auto-scaling/src/lib.rs
                 - rustv1/examples/auto-scaling/src/scenario.rs
   services:
-    auto-scaling:
-      {
-        CreateAutoScalingGroup,
-        DeleteAutoScalingGroup,
-        DisableMetricsCollection,
-        EnableMetricsCollection,
-        DescribeAutoScalingGroups,
-        DescribeAutoScalingInstances,
-        DescribeScalingActivities,
-        SetDesiredCapacity,
-        TerminateInstanceInAutoScalingGroup,
-        UpdateAutoScalingGroup,
-      }
+    auto-scaling: {CreateAutoScalingGroup, DeleteAutoScalingGroup, DisableMetricsCollection, EnableMetricsCollection, DescribeAutoScalingGroups,
+      DescribeAutoScalingInstances, DescribeScalingActivities, SetDesiredCapacity, TerminateInstanceInAutoScalingGroup, UpdateAutoScalingGroup}
