--- a/.doc_gen/metadata/cloudwatch-logs_metadata.yaml
+++ b/.doc_gen/metadata/cloudwatch-logs_metadata.yaml
@@ -197,7 +197,8 @@ cloudwatch-logs_DescribeSubscriptionFilters:
                 - javascript.v3.cloudwatchlogs.actions.DescribeSubscriptionFilters
         - sdk_version: 2
           github: javascript/example_code/cloudwatch-logs
-          sdkguide: sdk-for-javascript/v2/developer-guide/cloudwatch-examples-subscriptions.html#cloudwatch-examples-subscriptions-describing
+          sdkguide: 
+            sdk-for-javascript/v2/developer-guide/cloudwatch-examples-subscriptions.html#cloudwatch-examples-subscriptions-describing
           excerpts:
             - description:
               snippet_tags:
