--- a/.doc_gen/metadata/emr_metadata.yaml
+++ b/.doc_gen/metadata/emr_metadata.yaml
@@ -65,10 +65,8 @@ emr_AddJobFlowSteps:
             - description: Add a Spark step, which is run by the cluster as soon as it is added.
               snippet_tags:
                 - python.example_code.emr.AddJobFlowSteps
-            - description:
-                Run an &EMR; File System (EMRFS) command as a job step on a cluster.
-                This can be used to automate EMRFS commands on a cluster instead of running
-                commands manually through an SSH connection.
+            - description: Run an &EMR; File System (EMRFS) command as a job step on a cluster. This can be used to automate
+                EMRFS commands on a cluster instead of running commands manually through an SSH connection.
               snippet_tags:
                 - emr.python.addstep.emrfs
   services:
@@ -110,9 +108,8 @@ emr_DescribeStep:
 emr_Usage_InstallLibrariesWithSsm:
   title: Run a shell script to install libraries on &EMR; instances using an &AWS; SDK
   title_abbrev: Run a shell script to install libraries
-  synopsis: use &SYSlong; to run a shell script on &EMR; instances that installs
-    additional libraries. This way, you can automate instance management instead
-    of running commands manually through an SSH connection.
+  synopsis: use &SYSlong; to run a shell script on &EMR; instances that installs additional libraries. This way, you can automate
+    instance management instead of running commands manually through an SSH connection.
   category: Scenarios
   languages:
     Python:
@@ -129,9 +126,7 @@ emr_Usage_InstallLibrariesWithSsm:
 emr_Scenario_ShortLivedEmrCluster:
   title: Create a short-lived &EMR; cluster and run a step using an &AWS; SDK
   title_abbrev: Create a short-lived &EMR; cluster and run a step
-  synopsis:
-    create a short-lived &EMR; cluster that runs a step and automatically
-    terminates after the step completes.
+  synopsis: create a short-lived &EMR; cluster that runs a step and automatically terminates after the step completes.
   category: Scenarios
   languages:
     Python:
