--- a/.doc_gen/metadata/kinesis_metadata.yaml
+++ b/.doc_gen/metadata/kinesis_metadata.yaml
@@ -1,4 +1,3 @@
-# zexi 0.4.0
 kinesis_CreateStream:
   title: Create a &AK; stream using an &AWS; SDK
   title_abbrev: Create a stream
@@ -51,7 +50,7 @@ kinesis_CreateStream:
                 - kns.abapv1.create_stream
   services:
     kinesis: {CreateStream}
-kinesis_DeregisterConsumer:
+kinesis_DeregisterStreamConsumer:
   title: Deregister a consumer from a &AK; stream using an &AWS; SDK
   title_abbrev: Deregister a consumer
   synopsis: deregister a consumer from a &AK; stream.
@@ -102,7 +101,7 @@ kinesis_DescribeStream:
                 - kns.abapv1.describe_stream
   services:
     kinesis: {DescribeStream}
-kinesis_ListConsumers:
+kinesis_ListStreamConsumers:
   title: List the consumers of a &AK; stream using an &AWS; SDK
   title_abbrev: List the consumers of a stream
   synopsis: list the consumers of a &AK; stream.
@@ -152,7 +151,7 @@ kinesis_ListStreams:
                 - kns.abapv1.list_streams
   services:
     kinesis: {ListStreams}
-kinesis_ListTags:
+kinesis_ListTagsForStream:
   title: List the tags associated with a &AK; stream using an &AWS; SDK
   title_abbrev: List tags
   synopsis: list the tags associated with a &AK; stream.
@@ -299,7 +298,7 @@ kinesis_GetRecords:
                 - kns.abapv1.get_records
   services:
     kinesis: {GetRecords}
-kinesis_RegisterConsumer:
+kinesis_RegisterStreamConsumer:
   title: Register a consumer to a &AK; stream using an &AWS; SDK
   title_abbrev: Register a consumer
   synopsis: register a consumer to a &AK; stream.
@@ -324,7 +323,7 @@ kinesis_RegisterConsumer:
                 - kns.abapv1.register_stream_consumer
   services:
     kinesis: {RegisterStreamConsumer}
-kinesis_TagStream:
+kinesis_AddTagsToStream:
   title: Add tags to a &AK; stream using an &AWS; SDK
   title_abbrev: Add tags
   synopsis: add tags to a &AK; stream.
