--- a/.doc_gen/metadata/lambda_metadata.yaml
+++ b/.doc_gen/metadata/lambda_metadata.yaml
@@ -742,12 +742,11 @@ lambda_Scenario_GettingStartedFunctions:
     - Create an &IAM; role and &LAM; function, then upload handler code.
     - Invoke the function with a single parameter and get results.
     - Update the function code and configure with an environment variable.
-    - Invoke the function with new parameters and get results. Display the returned execution
-      log.
+    - Invoke the function with new parameters and get results. Display the returned execution log.
     - List the functions for your account, then clean up resources.
   category: Scenarios
   guide_topic:
-    title: "Create a &LAM; function with the console"
+    title: Create a &LAM; function with the console
     url: lambda/latest/dg/getting-started-create-function.html
   languages:
     .NET:
@@ -768,9 +767,7 @@ lambda_Scenario_GettingStartedFunctions:
             - description: Define a &LAM; handler that increments a number.
               snippet_tags:
                 - lambda.dotnetv3.handler.increment
-            - description:
-                Define a second &LAM; handler that performs arithmetic
-                operations.
+            - description: Define a second &LAM; handler that performs arithmetic operations.
               snippet_tags:
                 - lambda.dotnetv3.handler.arithmetic
     Go:
@@ -778,9 +775,7 @@ lambda_Scenario_GettingStartedFunctions:
         - sdk_version: 2
           github: gov2/lambda
           excerpts:
-            - description:
-                Create an interactive scenario that shows you how to get
-                started with &LAM; functions.
+            - description: Create an interactive scenario that shows you how to get started with &LAM; functions.
               snippet_tags:
                 - gov2.lambda.Scenario_GetStartedFunctions
             - description: Create a struct that wraps individual &LAM; actions.
@@ -830,9 +825,7 @@ lambda_Scenario_GettingStartedFunctions:
             - description: Define a &LAM; handler that increments a number.
               snippet_tags:
                 - python.example_code.lambda.handler.increment
-            - description:
-                Define a second &LAM; handler that performs arithmetic
-                operations.
+            - description: Define a second &LAM; handler that performs arithmetic operations.
               snippet_tags:
                 - python.example_code.lambda.handler.arithmetic
             - description: Create functions that wrap &LAM; actions.
@@ -926,20 +919,13 @@ lambda_Scenario_GettingStartedFunctions:
             - description: The Cargo.toml with dependencies used in this scenario.
               snippet_files:
                 - rustv1/examples/lambda/Cargo.toml
-            - description: A collection of utilities that streamline calling Lambda for this scenario. This file is src/ations.rs in the crate.
+            - description: A collection of utilities that streamline calling Lambda for this scenario. This file is src/ations.rs
+                in the crate.
               snippet_files:
                 - rustv1/examples/lambda/src/actions.rs
-            - description: A binary to run the scenario from front to end, using command line flags to control some behavior. This file is src/bin/scenario.rs in the crate.
+            - description: A binary to run the scenario from front to end, using command line flags to control some behavior.
+                This file is src/bin/scenario.rs in the crate.
               snippet_files:
                 - rustv1/examples/lambda/src/bin/scenario.rs
   services:
-    lambda:
-      {
-        CreateFunction,
-        DeleteFunction,
-        Invoke,
-        GetFunction,
-        ListFunctions,
-        UpdateFunctionCode,
-        UpdateFunctionConfiguration,
-      }
+    lambda: {CreateFunction, DeleteFunction, Invoke, GetFunction, ListFunctions, UpdateFunctionCode, UpdateFunctionConfiguration}
