--- a/.doc_gen/metadata/mediastore_metadata.yaml
+++ b/.doc_gen/metadata/mediastore_metadata.yaml
@@ -1,4 +1,4 @@
-mediaconvert_CreateContainer:
+mediastore_CreateContainer:
   title: Create a &EMSlong; container using an &AWS; SDK
   title_abbrev: Create a container
   synopsis: create an &EMSlong; container.
@@ -12,9 +12,9 @@ mediaconvert_CreateContainer:
             - description:
               snippet_tags:
                 - mediastore.java2.create_container.main
-  services:  
+  services:
     mediastore: {CreateContainer}
-mediaconvert_DeleteContainer:
+mediastore_DeleteContainer:
   title: Delete a &EMSlong; container using an &AWS; SDK
   title_abbrev: Delete a container
   synopsis: delete an &EMSlong; container.
@@ -28,9 +28,9 @@ mediaconvert_DeleteContainer:
             - description:
               snippet_tags:
                 - mediastore.java2.create_container.main
-  services:  
+  services:
     mediastore: {DeleteContainer}
-mediaconvert_DeleteObject:
+mediastore_DeleteObject:
   title: Delete a &EMSlong; object using an &AWS; SDK
   title_abbrev: Delete an object
   synopsis: delete a &EMSlong; object.
@@ -44,9 +44,9 @@ mediaconvert_DeleteObject:
             - description:
               snippet_tags:
                 - mediastore.java2.delete_object.main
-  services:  
-    mediastore: {DeleteObject} 
-mediaconvert_DescribeContainer:
+  services:
+    mediastore: {DeleteObject}
+mediastore_DescribeContainer:
   title: Describe a &EMSlong; container using an &AWS; SDK
   title_abbrev: Describe a container
   synopsis: describe a &EMSlong; container.
@@ -60,9 +60,9 @@ mediaconvert_DescribeContainer:
             - description:
               snippet_tags:
                 - mediastore.java2.describe_container.main
-  services:  
+  services:
     mediastore: {DescribeContainer}
-mediaconvert_GetObject:
+mediastore_GetObject:
   title: Get a &EMSlong; object using an &AWS; SDK
   title_abbrev: Get an object
   synopsis: get a &EMSlong; object.
@@ -76,9 +76,9 @@ mediaconvert_GetObject:
             - description:
               snippet_tags:
                 - mediastore.java2.get_object.main
-  services:  
-    mediastore: {GetObject} 
-mediaconvert_ListContainers:
+  services:
+    mediastore: {GetObject}
+mediastore_ListContainers:
   title: List &EMSlong; containers using an &AWS; SDK
   title_abbrev: List containers
   synopsis: list &EMSlong; containers.
@@ -92,9 +92,9 @@ mediaconvert_ListContainers:
             - description:
               snippet_tags:
                 - mediastore.java2.list_containers.main
-  services:  
+  services:
     mediastore: {ListContainers}
-mediaconvert_PutObject:
+mediastore_PutObject:
   title: Put a &EMSlong; object into a container using an &AWS; SDK
   title_abbrev: Put an object into a container
   synopsis: put an object into a &EMSlong; container.
@@ -108,5 +108,5 @@ mediaconvert_PutObject:
             - description:
               snippet_tags:
                 - mediastore.java2.put_object.main
-  services:  
+  services:
     mediastore: {PutObject}
