--- a/.doc_gen/metadata/personalize_metadata.yaml
+++ b/.doc_gen/metadata/personalize_metadata.yaml
@@ -1,5 +1,4 @@
-# zexi 0.4.2
-personalize_createBatchInferenceJob:
+personalize_CreateBatchInferenceJob:
   title: Create a batch inference job with &PERS; using an &AWS; SDK
   title_abbrev: Create a batch interface job
   synopsis: create a &PERS; batch interface job.
@@ -25,7 +24,7 @@ personalize_createBatchInferenceJob:
                 - personalize.java2.create_batch_inference_job.main
   services:
     personalize: {CreateBatchInferenceJob}
-personalize_createBatchSegmentJob:
+personalize_CreateBatchSegmentJob:
   title: Create a batch segment job with &PERS; using an &AWS; SDK
   title_abbrev: Create a batch segment job
   synopsis: create a &PERS; batch segment job.
@@ -42,7 +41,7 @@ personalize_createBatchSegmentJob:
                 - personalize.JavaScript.createBatchSegmentJobV3
   services:
     personalize: {CreateBatchSegmentJob}
-personalize_createCampaign:
+personalize_CreateCampaign:
   title: Create a campaign with &PERS; using an &AWS; SDK
   title_abbrev: Create a campaign
   synopsis: create a &PERS; campaign.
@@ -68,7 +67,7 @@ personalize_createCampaign:
                 - personalize.java2.create_campaign.main
   services:
     personalize: {CreateCampaign}
-personalize_createDataset:
+personalize_CreateDataset:
   title: Create a dataset with &PERS; using an &AWS; SDK
   title_abbrev: Create a dataset
   synopsis: create a &PERS; dataset.
@@ -94,7 +93,7 @@ personalize_createDataset:
                 - personalize.java2.create_dataset.main
   services:
     personalize: {CreateDataset}
-personalize_createDatasetExportJob:
+personalize_CreateDatasetExportJob:
   title: Create a dataset export job with &PERS; using an &AWS; SDK
   title_abbrev: Create a dataset export job
   synopsis: create a &PERS; dataset export job.
@@ -120,7 +119,7 @@ personalize_createDatasetExportJob:
                 - personalize.java2.create_dataset_export_job.main
   services:
     personalize: {CreateDatasetExportJob}
-personalize_createDatasetGroup:
+personalize_CreateDatasetGroup:
   title: Create a dataset group with &PERS; using an &AWS; SDK
   title_abbrev: Create a dataset group
   synopsis: create a &PERS; dataset group.
@@ -152,7 +151,7 @@ personalize_createDatasetGroup:
                 - personalize.java2.create_domain_dataset_group.main
   services:
     personalize: {CreateDatasetGroup}
-personalize_createDatasetImportJob:
+personalize_CreateDatasetImportJob:
   title: Create a dataset import job with &PERS; using an &AWS; SDK
   title_abbrev: Create a dataset import job
   synopsis: create a &PERS; dataset import job.
@@ -178,7 +177,7 @@ personalize_createDatasetImportJob:
                 - personalize.java2.create_dataset_import_job.main
   services:
     personalize: {CreateDatasetImportJob}
-personalize_createEventTracker:
+personalize_CreateEventTracker:
   title: Create an event tracker with &PERS; using an &AWS; SDK
   title_abbrev: Create an event tracker
   synopsis: create a &PERS; event tracker.
@@ -204,7 +203,7 @@ personalize_createEventTracker:
                 - personalize.java2.create_event_tracker.main
   services:
     personalize: {CreateEventTracker}
-personalize_createFilter:
+personalize_CreateFilter:
   title: Create a filter with &PERS; using an &AWS; SDK
   title_abbrev: Create a filter
   synopsis: create a &PERS; filter.
@@ -230,7 +229,7 @@ personalize_createFilter:
                 - personalize.java2.create_filter.main
   services:
     personalize: {CreateFilter}
-personalize_createRecommender:
+personalize_CreateRecommender:
   title: Create a recommender with &PERS; using an &AWS; SDK
   title_abbrev: Create a recommender
   synopsis: create a &PERS; recommender.
@@ -256,7 +255,7 @@ personalize_createRecommender:
                 - personalize.java2.create_recommender.main
   services:
     personalize: {CreateRecommender}
-personalize_createSchema:
+personalize_CreateSchema:
   title: Create a schema with &PERS; using an &AWS; SDK
   title_abbrev: Create a schema
   synopsis: create a &PERS; schema.
@@ -288,7 +287,7 @@ personalize_createSchema:
                 - personalize.java2.create_domain_schema.main
   services:
     personalize: {CreateSchema}
-personalize_createSolution:
+personalize_CreateSolution:
   title: Create a solution with &PERS; using an &AWS; SDK
   title_abbrev: Create a solution
   synopsis: create a &PERS; solution.
@@ -314,7 +313,7 @@ personalize_createSolution:
                 - personalize.java2.create_solution.main
   services:
     personalize: {CreateSolution}
-personalize_createSolutionVersion:
+personalize_CreateSolutionVersion:
   title: Create a solution version with &PERS; using an &AWS; SDK
   title_abbrev: Create a solution version
   synopsis: create a &PERS; solution.
@@ -340,7 +339,7 @@ personalize_createSolutionVersion:
                 - personalize.java2.create_solution_version.main
   services:
     personalize: {CreateSolutionVersion}
-personalize_deleteCampaign:
+personalize_DeleteCampaign:
   title: Delete a campaign in &PERS; using an &AWS; SDK
   title_abbrev: Delete a campaign
   synopsis: delete a campaign in &PERS;.
@@ -357,7 +356,7 @@ personalize_deleteCampaign:
                 - personalize.java2.delete_campaign.main
   services:
     personalize: {DeleteCampaign}
-personalize_deleteEventTracker:
+personalize_DeleteEventTracker:
   title: Delete an event tracker in &PERS; using an &AWS; SDK
   title_abbrev: Delete an event tracker
   synopsis: delete an event tracker in &PERS;.
@@ -374,7 +373,7 @@ personalize_deleteEventTracker:
                 - personalize.java2.delete_event_tracker.main
   services:
     personalize: {DeleteEventTracker}
-personalize_deleteSolution:
+personalize_DeleteSolution:
   title: Delete a solution in &PERS; using an &AWS; SDK
   title_abbrev: Delete a solution
   synopsis: delete a solution in &PERS;.
@@ -391,7 +390,7 @@ personalize_deleteSolution:
                 - personalize.java2.delete_solution.main
   services:
     personalize: {DeleteSolution}
-personalize_describeCampaign:
+personalize_DescribeCampaign:
   title: Describe a campaign in &PERS; using an &AWS; SDK
   title_abbrev: Describe a campaign
   synopsis: describe a campaign in &PERS;.
@@ -408,7 +407,7 @@ personalize_describeCampaign:
                 - personalize.java2.describe_campaign.main
   services:
     personalize: {DescribeCampaign}
-personalize_describeRecipe:
+personalize_DescribeRecipe:
   title: Describe a recipe in &PERS; using an &AWS; SDK
   title_abbrev: Describe a recipe
   synopsis: describe a recipe in &PERS;.
@@ -425,7 +424,7 @@ personalize_describeRecipe:
                 - personalize.java2.describe_recipe.main
   services:
     personalize: {DescribeRecipe}
-personalize_describeSolution:
+personalize_DescribeSolution:
   title: Describe a solution in &PERS; using an &AWS; SDK
   title_abbrev: Describe a solution
   synopsis: describe a solution in &PERS;.
@@ -442,7 +441,7 @@ personalize_describeSolution:
                 - personalize.java2.describe_solution.main
   services:
     personalize: {DescribeSolution}
-personalize_listCampaigns:
+personalize_ListCampaigns:
   title: List campaigns in &PERS; using an &AWS; SDK
   title_abbrev: List campaigns
   synopsis: list campaigns in &PERS;.
@@ -459,7 +458,7 @@ personalize_listCampaigns:
                 - personalize.java2.list_campaigns.main
   services:
     personalize: {ListCampaigns}
-personalize_listDatasetGroups:
+personalize_ListDatasetGroups:
   title: List dataset groups in &PERS; using an &AWS; SDK
   title_abbrev: List dataset groups
   synopsis: list dataset groups in &PERS;.
@@ -476,7 +475,7 @@ personalize_listDatasetGroups:
                 - personalize.java2.list_dsgroups.main
   services:
     personalize: {ListDatasetGroups}
-personalize_listRecipes:
+personalize_ListRecipes:
   title: List recipes in &PERS; using an &AWS; SDK
   title_abbrev: List recipes
   synopsis: list recipes in &PERS;.
@@ -493,7 +492,7 @@ personalize_listRecipes:
                 - personalize.java2.list_recipes.main
   services:
     personalize: {ListRecipes}
-personalize_listSolutions:
+personalize_ListSolutions:
   title: List solutions in &PERS; using an &AWS; SDK
   title_abbrev: List solutions
   synopsis: list solutions in &PERS;.
@@ -510,7 +509,7 @@ personalize_listSolutions:
                 - personalize.java2.list_solutions.main
   services:
     personalize: {ListSolutions}
-personalize_updateCampaign:
+personalize_UpdateCampaign:
   title: Update a campaign in &PERS; using an &AWS; SDK
   title_abbrev: Update a campaign
   synopsis: update a campaign &PERS;.
