--- a/.doc_gen/metadata/services.yaml
+++ b/.doc_gen/metadata/services.yaml
@@ -1135,31 +1135,31 @@ elastic-beanstalk:
     product_categories: {}
   version: '2010-12-01'
 elastic-load-balancing:
-  api_ref: elasticloadbalancing/latest/APIReference/Welcome.html
-  blurb: ''
+  api_ref: elasticloadbalancing/2012-06-01/APIReference/Welcome.html
+  blurb: automatically distributes your incoming traffic across multiple targets, such as EC2 instances, containers, and IP addresses, in one or more Availability Zones.
   expanded:
-    long: Elastic Load Balancing
-    short: Elastic Load Balancing
+    long: Elastic Load Balancing - Version 1
+    short: Elastic Load Balancing - Version 1
   guide:
-    subtitle: Developer Guide
-    url: elasticloadbalancing/latest/userguide/what-is-load-balancing.html
-  long: '&ELBlong;'
-  short: '&ELB;'
-  sort: Elastic Load Balancing
+    subtitle: User Guide
+    url: elasticloadbalancing/latest/classic/introduction.html
+  long: '&ELBv1long;'
+  short: '&ELBv1;'
+  sort: Elastic Load Balancing - Version 1
   tags:
-    product_categories: {}
-  version: '2012-06-01'
+    product_categories: {'Networking &amp; Content Delivery'}
+  version: 'elasticloadbalancing-2012-06-01'
 elastic-load-balancing-v2:
-  long: '&ELBlong; (&ELBacro;)'
-  short: '&ELB;'
-  sort: Elastic Load Balancing
+  long: '&ELBv2long;'
+  short: '&ELBv2;'
+  sort: Elastic Load Balancing - Version 2
   expanded:
-    long: Elastic Load Balancing (ELB)
-    short: ELB
+    long: Elastic Load Balancing - Version 2
+    short: Elastic Load Balancing - Version 2
   blurb: automatically distributes your incoming traffic across multiple targets, such as EC2 instances, containers, and IP addresses, in one or more Availability Zones.
   guide:
     subtitle: User Guide
-    url: elasticloadbalancing/latest/userguide/what-is-load-balancing.html
+    url: elasticloadbalancing/latest/APIReference/Welcome.html
   api_ref: elasticloadbalancing/latest/APIReference/Welcome.html
   tags:
     product_categories: {'Networking &amp; Content Delivery'}
@@ -3101,38 +3101,38 @@ vpc-lattice:
     product_categories: {}
   version: '2022-11-30'
 waf:
-  api_ref: waf/latest/APIReference/Welcome.html
-  blurb: ''
+  api_ref: waf/latest/APIReference/API_Operations_AWS_WAF.html
+  blurb: is a web application firewall that lets you monitor and manage web requests that are forwarded to protected AWS resources.
   expanded:
-    long: AWS WAF
-    short: AWS WAF
+    long: AWS WAF Classic
+    short: AWS WAF Classic
   guide:
     subtitle: Developer Guide
     url: waf/latest/developerguide/waf-chapter.html
-  long: '&WAFlong;'
-  short: '&WAF;'
-  sort: WAF
+  long: '&WAFClassic;'
+  short: '&WAFClassic;'
+  sort: WAF Classic
   tags:
-    product_categories: {}
-  version: '2015-08-24'
+    product_categories: {'Security, Identity, &amp; Compliance'}
+  version: 'waf-2015-08-24'
 waf-regional:
-  api_ref: waf/latest/APIReference/Welcome.html
-  blurb: ''
+  api_ref: waf/latest/APIReference/API_Operations_AWS_WAF_Regional.html
+  blurb: is a web application firewall that lets you monitor and manage web requests that are forwarded to protected AWS resources.
   expanded:
-    long: AWS WAF
-    short: AWS WAF
+    long: AWS WAF Classic Regional
+    short: AWS WAF Classic Regional
   guide:
     subtitle: Developer Guide
     url: waf/latest/developerguide/waf-chapter.html
-  long: '&WAFRegionallong;'
-  short: '&WAFRegional;'
-  sort: WAF
+  long: '&WAFClassicRegional;'
+  short: '&WAFClassicRegional;'
+  sort: WAF Classic Regional
   tags:
-    product_categories: {}
-  version: '2016-11-28'
+    product_categories: {'Security, Identity, &amp; Compliance'}
+  version: 'waf-regional-2016-11-28'
 wafv2:
-  api_ref: waf/latest/APIReference/Welcome.html
-  blurb: ''
+  api_ref: waf/latest/APIReference/API_Operations_AWS_WAFV2.html
+  blurb: is a web application firewall that lets you monitor and manage web requests that are forwarded to protected AWS resources.
   expanded:
     long: AWS WAFV2
     short: AWS WAFV2
@@ -3141,10 +3141,10 @@ wafv2:
     url: waf/latest/developerguide/waf-chapter.html
   long: '&WAFv2long;'
   short: '&WAFv2;'
-  sort: WAF
+  sort: WAFV2
   tags:
-    product_categories: {}
-  version: '2019-07-29'
+    product_categories: {'Security, Identity, &amp; Compliance'}
+  version: 'wafv2-2019-07-29'
 workdocs:
   api_ref: workdocs/latest/APIReference/Welcome.html
   blurb: ''
