--- a/.doc_gen/metadata/sesv2_metadata.yaml
+++ b/.doc_gen/metadata/sesv2_metadata.yaml
@@ -1,4 +1,3 @@
-# zexi 0.4.0
 sesv2_CreateContactList:
   title: Create an &SESv2; contact list using an &AWS; SDK
   title_abbrev: Create a contact list
@@ -133,7 +132,7 @@ sesv2_ListContacts:
                 - python.example_code.sesv2.ListContacts
   services:
     sesv2: {ListContacts}
-sesv2_SendEmail_Simple:
+sesv2_SendEmail:
   title: Send an &SESv2; email using an &AWS; SDK
   title_abbrev: Send an email
   synopsis: send an &SESv2; email.
@@ -221,7 +220,6 @@ sesv2_CreateEmailIdentity:
                 - sesv2.rust.create-email-identity
   services:
     sesv2: {CreateEmailIdentity}
-
 sesv2_CreateEmailTemplate:
   title: Create an &SESv2; email template using an &AWS; SDK
   title_abbrev: Create an email template
@@ -255,7 +253,6 @@ sesv2_CreateEmailTemplate:
                 - sesv2.rust.create-email-template
   services:
     sesv2: {CreateEmailTemplate}
-
 sesv2_DeleteContactList:
   title: Delete an &SESv2; contact list using an &AWS; SDK
   title_abbrev: Delete a  contact list
@@ -290,7 +287,6 @@ sesv2_DeleteContactList:
                 - sesv2.rust.delete-contact-list
   services:
     sesv2: {DeleteContactList}
-
 sesv2_DeleteEmailIdentity:
   title: Delete an &SESv2; email identity using an &AWS; SDK
   title_abbrev: Delete an email identity
@@ -325,7 +321,6 @@ sesv2_DeleteEmailIdentity:
                 - sesv2.rust.delete-email-identity
   services:
     sesv2: {DeleteEmailIdentity}
-
 sesv2_DeleteEmailTemplate:
   title: Delete an &SESv2; email template using an &AWS; SDK
   title_abbrev: Delete an email template
@@ -360,11 +355,10 @@ sesv2_DeleteEmailTemplate:
                 - sesv2.rust.delete-email-template
   services:
     sesv2: {DeleteEmailTemplate}
-
 sesv2_NewsletterWorkflow:
   title: A complete &SESv2; Newsletter workflow using an &AWS; SDK
   title_abbrev: Newsletter workflow
-  synopsis: "&SESv2; newsletter workflow."
+  synopsis: '&SESv2; newsletter workflow.'
   category: Scenarios
   languages:
     Java:
@@ -419,16 +413,5 @@ sesv2_NewsletterWorkflow:
                 - sesv2.rust.delete-email-identity
                 - sesv2.rust.delete-email-template
   services:
-    sesv2:
-      {
-        CreateContactList,
-        CreateContact,
-        ListContacts,
-        SendEmail.simple,
-        SendEmail.template,
-        CreateEmailIdentity,
-        CreateEmailTemplate,
-        DeleteContactList,
-        DeleteEmailIdentity,
-        DeleteEmailTemplate,
-      }
+    sesv2: {CreateContactList, CreateContact, ListContacts, SendEmail.simple, SendEmail.template, CreateEmailIdentity, CreateEmailTemplate,
+      DeleteContactList, DeleteEmailIdentity, DeleteEmailTemplate}
