--- a/.doc_gen/metadata/sfn_metadata.yaml
+++ b/.doc_gen/metadata/sfn_metadata.yaml
@@ -39,7 +39,7 @@ sfn_Hello:
           excerpts:
             - description: Java version of Hello.
               snippet_tags:
-                - stepfunctions.java2.list_machines.main           
+                - stepfunctions.java2.list_machines.main
   services:
     sfn: {ListStateMachines}
 sfn_CreateStateMachine:
@@ -171,8 +171,7 @@ sfn_ListStateMachines:
           github: python/example_code/stepfunctions
           sdkguide:
           excerpts:
-            - description: Find a state machine by name by searching the list of
-                state machines for the account.
+            - description: Find a state machine by name by searching the list of state machines for the account.
               snippet_tags:
                 - python.example_code.sfn.StateMachine_decl
                 - python.example_code.sfn.ListStateMachines
@@ -586,8 +585,7 @@ sfn_Scenario_GetStartedStateMachines:
   title_abbrev: Get started with state machines
   synopsis_list:
     - Create an activity.
-    - Create a state machine from an &SLN; definition that contains the
-      previously created activity as a step.
+    - Create a state machine from an &SLN; definition that contains the previously created activity as a step.
     - Run the state machine and respond to the activity with user input.
     - Get the final status and output after the run completes, then clean up resources.
   category: Scenarios
@@ -600,7 +598,7 @@ sfn_Scenario_GetStartedStateMachines:
           excerpts:
             - description:
               snippet_tags:
-                - stepfunctions.kotlin.scenario.main  
+                - stepfunctions.kotlin.scenario.main
     .NET:
       versions:
         - sdk_version: 3
@@ -623,7 +621,7 @@ sfn_Scenario_GetStartedStateMachines:
           excerpts:
             - description:
               snippet_tags:
-                - stepfunctions.java2.scenario.main  
+                - stepfunctions.java2.scenario.main
     Python:
       versions:
         - sdk_version: 3
@@ -640,6 +638,5 @@ sfn_Scenario_GetStartedStateMachines:
               snippet_tags:
                 - python.example_code.sfn.Activity_full
   services:
-    sfn: {CreateActivity, CreateStateMachine, DeleteActivity, DeleteStateMachine, DescribeExecution,
-          DescribeStateMachine, GetActivityTask, ListActivities, ListStateMachines,
-          SendTaskSuccess, StartExecution, StopExecution}
+    sfn: {CreateActivity, CreateStateMachine, DeleteActivity, DeleteStateMachine, DescribeExecution, DescribeStateMachine,
+      GetActivityTask, ListActivities, ListStateMachines, SendTaskSuccess, StartExecution, StopExecution}
