--- a/.doc_gen/metadata/ssm_metadata.yaml
+++ b/.doc_gen/metadata/ssm_metadata.yaml
@@ -1,4 +1,3 @@
-# zexi 0.4.0
 ssm_Hello:
   title: Hello &SYS;
   title_abbrev: Hello &SYS;
@@ -66,7 +65,7 @@ ssm_PutParameter:
                 - ssm.rust.create-parameter
   services:
     ssm: {PutParameter}
-ssm_createOpsItem:
+ssm_CreateOpsItem:
   title: Create an opsItem using the &SYS; SDK
   title_abbrev: Create an opsItem
   synopsis: create an opsItem.
@@ -82,8 +81,8 @@ ssm_createOpsItem:
               snippet_tags:
                 - ssm.java2.create_ops.main
   services:
-    ssm: {CreateOpsItem} 
-ssm_updateMaintenanceWindow:
+    ssm: {CreateOpsItem}
+ssm_UpdateMaintenanceWindow:
   title: Update a maintenance window using the &SYS; SDK
   title_abbrev: Update a maintenance window
   synopsis: update a maintenance window.
@@ -99,8 +98,8 @@ ssm_updateMaintenanceWindow:
               snippet_tags:
                 - ssm.java2.update_window.main
   services:
-    ssm: {UpdateMaintenanceWindow} 
-ssm_createMaintenanceWindow:
+    ssm: {UpdateMaintenanceWindow}
+ssm_CreateMaintenanceWindow:
   title: Create a maintenance window using the &SYS; SDK
   title_abbrev: Create a maintenance window
   synopsis: create a maintenance window.
@@ -116,8 +115,8 @@ ssm_createMaintenanceWindow:
               snippet_tags:
                 - ssm.java2.create_window.main
   services:
-    ssm: {CreateMaintenanceWindow} 
-ssm_sendCommand:
+    ssm: {CreateMaintenanceWindow}
+ssm_SendCommand:
   title: Send a command using the &SYS; SDK
   title_abbrev: Send a command
   synopsis: send a command.
@@ -133,8 +132,8 @@ ssm_sendCommand:
               snippet_tags:
                 - ssm.Java2.send_command.main
   services:
-    ssm: {SendCommand}     
-ssm_createDocument:
+    ssm: {SendCommand}
+ssm_CreateDocument:
   title: Create a document using the &SYS; SDK
   title_abbrev: Create a document
   synopsis: create a document.
@@ -150,8 +149,8 @@ ssm_createDocument:
               snippet_tags:
                 - ssm.java2.create_doc.main
   services:
-    ssm: {CreateDocument} 
-ssm_describeOpsItems:
+    ssm: {CreateDocument}
+ssm_DescribeOpsItems:
   title: Describe an &SYS; Opsitem using the SDK
   title_abbrev: Describe an Opsitem
   synopsis: describe an Opsitem.
@@ -167,8 +166,8 @@ ssm_describeOpsItems:
               snippet_tags:
                 - ssm.java2.describe_ops.main
   services:
-    ssm: {DescribeOpsItems}  
-ssm_deleteMaintenanceWindow:
+    ssm: {DescribeOpsItems}
+ssm_DeleteMaintenanceWindow:
   title: Delete a maintenance window using the &SYS; SDK
   title_abbrev: Delete a maintenance window
   synopsis: delete a maintenance window.
@@ -184,8 +183,8 @@ ssm_deleteMaintenanceWindow:
               snippet_tags:
                 - ssm.java2.delete_window.main
   services:
-    ssm: {DeleteMaintenanceWindow}  
-ssm_deleteDocument:
+    ssm: {DeleteMaintenanceWindow}
+ssm_DeleteDocument:
   title: Delete a document using the &SYS; SDK
   title_abbrev: Delete a document
   synopsis: delete a document.
@@ -201,7 +200,7 @@ ssm_deleteDocument:
               snippet_tags:
                 - ssm.Java2.delete_doc.main
   services:
-    ssm: {DeleteDocument}     
+    ssm: {DeleteDocument}
 ssm_UpdateOpsItem:
   title: Update an OpsItem using a &SYS; SDK
   title_abbrev: Update an OpsItem
@@ -218,10 +217,10 @@ ssm_UpdateOpsItem:
               snippet_tags:
                 - ssm.Java2.resolve_ops.main
   services:
-    ssm: {UpdateOpsItem}                 
+    ssm: {UpdateOpsItem}
 ssm_Scenario:
   title: Get started with &SYS; using an &AWS; SDK
-  title_abbrev: Get started with &SYS; 
+  title_abbrev: Get started with &SYS;
   synopsis: work with &SYS; maintenance windows, documents, and OpsItems.
   category: Scenarios
   languages:
@@ -235,4 +234,5 @@ ssm_Scenario:
               snippet_tags:
                 - ssm.java2.scenario.main
   services:
-    ssm: {CreateOpsItem, CreateMaintenanceWindow, CreateDocument, SendCommand, CommandInvocations, DeleteMaintenanceWindow, UpdateOpsItem}
+    ssm: {CreateOpsItem, CreateMaintenanceWindow, CreateDocument, SendCommand, CommandInvocations, DeleteMaintenanceWindow,
+      UpdateOpsItem}
